2007-07-14  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/unit/don_ping_test.rb: Add to use Hpricot not to depend Htree.
	* donrails/lib/modules/moinmoin.rb (DonRails::Moinmoin::body_to_xml): likewise.
	* donrails/lib/modules/html.rb (DonRails::HTML::body_to_xml): likewise.
	* donrails/lib/modules/rd.rb (DonRails::RD::body_to_xml): likewise.
	* donrails/lib/modules/wiliki.rb (DonRails::Wiliki::body_to_xml): likewise.
	* donrails/lib/modules/hnf.rb (DonRails::HNF::body_to_xml): likewise.

2007-07-13  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/helpers/rdf_helper.rb (RdfHelper::{rdf,rss2}_parts*): New method to share for rdf and rss.
	* donrails/app/views/rdf/*.rxml: Change to use these.

2007-07-12  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_attachment.rb (DonAttachment::update_attachment_attributes): Remove push_with_attributes. 

	* donrails/app/controllers/admin/article_controller.rb: Cleanup.

	* donrails/app/apis/movable_type_service.rb (MovableTypeService::setPostCategories): Remove push_with_attributes. 

	* donrails/app/helpers/application_helper.rb (ApplicationHelper::bind_article_category): Remove push_with_attributes.

	* donrails/app/views/rdf/rdf_enrollment.rxml: likewise.

	* donrails/app/views/rdf/rdf_category.rxml: likewise.

	* donrails/app/views/rdf/rdf_search.rxml: likewise.

	* donrails/app/views/rdf/rdf_article.rxml: likewise.

	* donrails/app/views/rdf/rdf_recent.rxml: Remove <copyright> and <trackback>. Change <category> to <dc:subject>.

	* donrails/app/views/rdf/rss2_search.rxml: likewise.

	* donrails/app/views/rdf/rss2_enrollment.rxml: likewise.

	* donrails/app/views/rdf/rss2_category.rxml: likewise.

	* donrails/app/views/rdf/rss2_article.rxml: likewise.

	* donrails/app/views/rdf/rss2_recent.rxml: Add <guid>.

2007-07-11  ARAKI Yasuhiro  <yasu@debian.or.jp>

	** uncompatible change ** in 1.6.9.8 
	* *** CHANGE *** to use from habtm to has_many :through. Please 'rake db:migrate'